[gd_scene load_steps=6 format=2]

[ext_resource path="res://ECC_TPController/ECC_TPController.gd" type="Script" id=1]
[ext_resource path="res://ECC_TPController/CheckInputs.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 2.5, 0.5 )

[node name="ECC_ThirdPerson" type="Spatial" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0.25, 2.5, 0.25 )
script = ExtResource( 1 )
ViewCamera = NodePath("X Gimbal/ViewCamera")
ClipCamera = NodePath("X Gimbal/ClipCameraTarget/ClippedCamera")
ZoomLevels = [ NodePath("X Gimbal/ClipCameraTarget/Zoom1"), NodePath("X Gimbal/ClipCameraTarget/Zoom2"), NodePath("X Gimbal/ClipCameraTarget/Zoom3") ]
ZoomDelay = 0.5

[node name="CheckInputs" type="Node" parent="."]
script = ExtResource( 2 )

[node name="X Gimbal" type="Spatial" parent="." groups=[
"Player",
]]

[node name="HelperMesh" type="MeshInstance" parent="X Gimbal" groups=[
"Player",
]]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null
__meta__ = {
"_editor_description_": "This HelperMesh represents the gimbal setup's CENTER, and thus its ZERO POSITION.

Use this to to set where you want your camera to rotate  arond the player - DO NOT MOVE THE CAMERAS THEMSELVES!!!
"
}

[node name="ViewCamera" type="Camera" parent="X Gimbal" groups=[
"Player",
]]
transform = Transform( -1, 0, 3.25841e-007, 0, 1, 0, -3.25841e-007, 0, -1, 0, 0, -4 )
current = true
fov = 60.0
near = 0.01
__meta__ = {
"_editor_description_": "This is the camera that actually sees the player.

We feed it the positioning information from the ClippedCamera node.

Make sure it matches the rotational "
}

[node name="CanClipDetector" type="Area" parent="X Gimbal/ViewCamera" groups=[
"Player",
]]
transform = Transform( -1, 5.65817e-008, -3.20891e-007, 1.25092e-015, 0.984807, 0.173648, 3.25841e-007, 0.173648, -0.984807, 0, -0.174, 0.5 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="X Gimbal/ViewCamera/CanClipDetector" groups=[
"Player",
]]
shape = SubResource( 2 )

[node name="ClipCameraTarget" type="Spatial" parent="X Gimbal" groups=[
"Player",
]]

[node name="ClippedCamera" type="ClippedCamera" parent="X Gimbal/ClipCameraTarget" groups=[
"Player",
]]
transform = Transform( -1, 3.55271e-015, 3.25841e-007, 3.55271e-015, 1, 1.49012e-008, -3.25841e-007, 1.49012e-008, -1, 0, 0, -4 )
doppler_tracking = 1
fov = 60.0
near = 0.01
margin = 10.0
process_mode = 1

[node name="Zoom1" type="Position3D" parent="X Gimbal/ClipCameraTarget" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="Zoom2" type="Position3D" parent="X Gimbal/ClipCameraTarget" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8 )

[node name="Zoom3" type="Position3D" parent="X Gimbal/ClipCameraTarget" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12 )

[node name="ConfinedSpaceDetector" type="Spatial" parent="." groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0 )

[node name="ConfinedSpaceArea" type="Area" parent="ConfinedSpaceDetector" groups=[
"Player",
]]
gravity_vec = Vector3( 0, 0, 0 )

[node name="Shape" type="CollisionShape" parent="ConfinedSpaceDetector/ConfinedSpaceArea" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 3 )

[node name="ZoomTimer" type="Timer" parent="."]
wait_time = 0.1
__meta__ = {
"_editor_description_": "We use this timer to prevent the player from \"blasting\" through different zoom levels."
}
[connection signal="body_entered" from="X Gimbal/ViewCamera/CanClipDetector" to="." method="_on_CanClipDetector_body_entered"]
[connection signal="body_exited" from="X Gimbal/ViewCamera/CanClipDetector" to="." method="_on_CanClipDetector_body_exited"]
[connection signal="body_entered" from="ConfinedSpaceDetector/ConfinedSpaceArea" to="." method="_on_ConfinedSpaceArea_body_entered"]
[connection signal="body_exited" from="ConfinedSpaceDetector/ConfinedSpaceArea" to="." method="_on_ConfinedSpaceArea_body_exited"]
[connection signal="timeout" from="ZoomTimer" to="." method="_on_ZoomTimer_timeout"]
